ChangeLog for herdstat

2005-06-14 Aaron Walker <ka0ttic@gentoo.org>

	* lib/vars.cc: ensure that a previously existing element in the vars
	map is erased before trying to insert it (otherwise insert() fails).
	* bashcomp: Updated to only define _complete_herd and _complete_dev if
	not previously defined, as the upcoming gentoo-bashcomp will define
	them.

2005-06-11 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc8).
	* src/file.hh: Added exists() member func.  Modified operator() to
	return a bool (exists).
	* src/metacache.cc, src/pkgcache.cc, src/herds_xml.cc,
	src/herds_xml_handler.cc, src/devaway.cc: Updated to use stat_T over
	struct stat.
	* src/action_which_handler.cc: Fixed bug in --which --regex that
	caused certain matches (those that also exist in an overlay) to not be
	displayed.

2005-06-10 Aaron Walker <ka0ttic@gentoo.org>

	* lib/file.cc, lib/file.hh:  Rewrote file classes from scratch.  Added
	a stat_T class which acts as a stat wrapper.  The rewrite fixes a few
	design flaws/bugs with the previous implementation.  Also use
	std::equal in file_T::operator== instead of std::mismatch.
	* lib/vars.hh: Updated vars_T with new file_base_T interface.
	* lib/portage_find.cc: Fixed significant bug in
	find_package_regex_in().  An errant 'not' caused the function to
	search the pkgcache when it was empty, and walk the tree when it
	wasn't (should be the other way around).
	* src/formatter.cc, src/formatter.hh: Fixed bug that caused colors to
	be assigned to the highlight map, even if --nocolor was specified.
	This caused weird colored output (with no end) on output that is
	highlighted.
	* src/metacache.cc: minor style changes.
	* src/pkgcache.cc: Fixed fill() to search overlays as well.

2005-06-09 Aaron Walker <ka0ttic@gentoo.org>

	* lib/file.cc, lib/file.hh: Clean up a little.

2005-06-08 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc7).