@@ -99,6 +99,23 @@ metacache_T::valid() const
             valid = (metacache.size() > 0);
     }
 
+    /* 
+     * only valid if first line is "version=VERSION".
+     * this prevents weird bugs if for some reason the
+     * metacache format changed between versions.
+     */
+
+    if (valid)
+    {
+        std::ifstream stream(METACACHE);
+        if (not stream)
+            throw util::bad_fileobject_E(METACACHE);
+
+        std::string line;
+        valid = (std::getline(stream, line) and
+                (line == (std::string("version=")+VERSION)));
+    }
+
     debug_msg("metadata cache is valid? %d", valid);
     return valid;
 }
@@ -233,17 +250,16 @@ void
 metacache_T::dump()
 {
     std::ofstream f(METACACHE);
-    if (not f.is_open())
+    if (not f)
         throw util::bad_fileobject_E(METACACHE);
 
-    f << "# Automatically generated by " << PACKAGE << "-" << VERSION
-        << std::endl;
+    f << "version=" << VERSION << std::endl;
     f << "portdir=" << this->_portdir << std::endl;
     f << "size=" << this->size() << std::endl;
 
     /* for each metadata_T object */
-    iterator ce = this->end();
-    for (iterator ci = this->begin() ; ci != ce ; ++ci)
+    iterator ci, ce;
+    for (ci = this->begin(), ce = this->end()  ; ci != ce ; ++ci)
     {
         /*
          * format is the form of:
